swapped out mobile newsletter images and corrected alignment in tablet screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,8 +60,8 @@ section {
 
 #services4a {
     background-color:#ffffff;
-    padding: 25%;
 }
+
 
 
 #customers {
@@ -113,7 +113,7 @@ section {
 }
 
 #services3 img {
-    height: 60%;
+ 
 }
 
 /* Buttons */
